--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -1,13 +1,19 @@
 version: 1.0
-runtime: python3
-
+runtime: python311
 build:
   commands:
     build:
-      - pip install -r requirements.txt
-
+      - pip3 install -r requirements.txt
+    post-build:
+      - python3 manage.py collectstatic
+  env:
+    - name: DJANGO_SETTINGS_MODULE
+      value: "apprunner.settings"
 run:
   runtime-version: 3.11
-  command: sh startup.sh
+  pre-run:
+    - pip3 install -r requirements.txt
+    - python3 manage.py collectstatic
+  command: gunicorn apprunner.wsgi --log-file -
   network:
     port: 8000
